--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "auto-text-size": "^0.2.3",
     "axios": "^1.4.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
