--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "unimported": "^1.31.1"
+    "unimported": "^1.31.1",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
