--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "clean:images": "node scripts/cleanup-unused-images.js",
+    "generate:sitemap": "node scripts/generate-sitemap.js",
+    "deploy": "npm run clean:images && npm run generate:sitemap && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +21,8 @@
     "auto-text-size": "^0.2.3",
     "axios": "^1.4.0",
     "framer-motion": "^10.18.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
@@ -25,6 +30,7 @@
     "react-icons": "^4.10.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
+    "readline-sync": "^1.4.10",
     "unimported": "^1.31.1",
     "universal-cookie": "^7.2.2"
   },
